docs/v1.4.5/zh/api/campaign/PartyThinkParams.md
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `PartyThinkParams`
- [← 本领域 / 返回 campaign](./)
- [↑ API 目录](../)
- [🏠 首页 v1.4.5](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# PartyThinkParams

**Namespace:** TaleWorlds.CampaignSystem
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class PartyThinkParams`
**Base:** 无
**File:** `Bannerlord.Source/bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem/PartyThinkParams.cs`

## 概述

`PartyThinkParams` 位于 `TaleWorlds.CampaignSystem`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### Reset
`public void Reset(MobileParty mobileParty)`

**用途 / Purpose:** 将 `reset` 重置为初始状态。

### Initialization
`public void Initialization()`

**用途 / Purpose:** 初始化 `ialization` 的状态、资源或绑定。

### SetArmyMembers
`public void SetArmyMembers(MBList<MobileParty> armyMembers)`

**用途 / Purpose:** 设置 `army members` 的值或状态。

### TryGetBehaviorScore
`public bool TryGetBehaviorScore(in AIBehaviorData aiBehaviorData, out float score)`

**用途 / Purpose:** 尝试获取 `get behavior score`，通常以 out 参数返回结果。

### SetBehaviorScore
`public void SetBehaviorScore(in AIBehaviorData aiBehaviorData, float score)`

**用途 / Purpose:** 设置 `behavior score` 的值或状态。

### AddBehaviorScore
`public void AddBehaviorScore(in (AIBehaviorData, float) value)`

**用途 / Purpose:** 向当前集合/状态中添加 `behavior score`。

## 使用示例

```csharp
var value = new PartyThinkParams();
value.Reset(mobileParty);
```

## 参见

- [完整类目录](../catalog)